[gd_scene load_steps=7 format=3 uid="uid://d3cqrd5mkwyjx"]

[ext_resource type="Script" path="res://prefabs/ui/uiController.gd" id="1_ixsxp"]
[ext_resource type="Texture2D" uid="uid://bpq1edqbkil88" path="res://textures/fillBarBG.png" id="2_pagcj"]
[ext_resource type="Texture2D" uid="uid://bt6fn1nk0bprp" path="res://textures/fillBArFore.png" id="3_qongt"]
[ext_resource type="Texture2D" uid="uid://d3qd1wjtt4sbp" path="res://textures/fillBarFill.png" id="4_iysu3"]

[sub_resource type="Gradient" id="Gradient_saae1"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_s0qfu"]
gradient = SubResource("Gradient_saae1")

[node name="UiLayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
mouse_filter = 2
script = ExtResource("1_ixsxp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 322.0
offset_bottom = 144.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="lButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Create large Box"

[node name="mButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Create medium Box"

[node name="sButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Create small Box"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="sendButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Send current box Away"

[node name="closeButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Close Box"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Current box: null"

[node name="BoxFillBar" type="TextureProgressBar" parent="HBoxContainer"]
layout_mode = 2
max_value = 220.0
fill_mode = 3
texture_under = ExtResource("2_pagcj")
texture_over = ExtResource("3_qongt")
texture_progress = ExtResource("4_iysu3")

[node name="Fade" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_s0qfu")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/mButton" to="." method="_on_m_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/sButton" to="." method="_on_s_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/sendButton" to="." method="_on_send_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/closeButton" to="." method="_on_close_button_pressed"]
